--- a/pancake_shop/index.html
+++ b/pancake_shop/index.html
@@ -16,17 +16,17 @@
           alt="Pancake Image"
           style="visibility: visible"
         />
-        <img src="images/pancakeNuts.webp" alt="Pancake nuts topping Image" />
-        <img
+        <img class="toppingImage" src="images/pancakeNuts.webp" alt="Pancake nuts topping Image" />
+        <img class="toppingImage"
           src="images/pancakeBananas.webp"
           alt="Pancake bananas topping Image"
         />
-        <img src="images/pancakeSyrup.webp" alt="Pancake syrup topping Image" />
-        <img
+        <img class="toppingImage" src="images/pancakeSyrup.webp" alt="Pancake syrup topping Image" />
+        <img class="toppingImage"
           src="images/pancakeWhipping.webp"
           alt="Pancake whipping cream Image"
         />
-        <img src="images/pancakeIcecream.webp" alt="Pancake icecream Image" />
+        <img class="toppingImage" src="images/pancakeIcecream.webp" alt="Pancake icecream Image" />
         <div class="price-banner">
           <p>€</p>
           <span class="totalPrice">5.00</span>
@@ -84,7 +84,7 @@
         </div>
         <div class="price-display">
           <h3>Total Price: €<span class="totalPrice">5.00</span></h3>
-          <img class="button" src="confirmButton.svg" alt="Confirm Button" />
+          <img class="button" id="confirmButton" src="confirmButton.svg" alt="Confirm Button" />
         </div>
       </div>
       <div class="confirm-container">
@@ -105,7 +105,7 @@
         </div>
         <div class="price-display">
           <h3>Total Price: €<span class="totalPrice">5.00</span></h3>
-          <img class="button" src="orderButton.svg" alt="Confirm Button" />
+          <img class="button" id="orderButton" src="orderButton.svg" alt="Order Button" />
         </div>
       </div>
     </div>
