move some block around for readability and add comments

--- a/pancake_shop/index.html
+++ b/pancake_shop/index.html
@@ -8,7 +8,9 @@
     <link rel="icon" href="images/pancakeClassic.webp" type="image/x-icon" />
   </head>
   <body>
+    <!-- main container -->
     <div class="container">
+      <!-- cake display -->
       <div class="image-container">
         <img
           class="imageDefault"
@@ -32,6 +34,7 @@
           <span class="totalPrice">5.00</span>
         </div>
       </div>
+      <!-- cake customize section -->
       <div class="form-container">
         <h2>Customize Your Pancake</h2>
         <div class="customization-section">
@@ -84,9 +87,10 @@
         </div>
         <div class="price-display">
           <h3>Total Price: €<span class="totalPrice">5.00</span></h3>
-          <img class="button" id="confirmButton" src="confirmButton.svg" alt="Confirm Button" />
+          <img class="button" id="confirmButton" src="images/orderButton.svg" alt="Confirm Button" />
         </div>
       </div>
+      <!-- confirmation section -->
       <div class="confirm-container">
         <label for="backToOrder">
           <p id="backToOrder">&lt; Back to order</p>
@@ -105,9 +109,10 @@
         </div>
         <div class="price-display">
           <h3>Total Price: €<span class="totalPrice">5.00</span></h3>
-          <img class="button" id="orderButton" src="orderButton.svg" alt="Order Button" />
+          <img class="button" id="orderButton" src="images/orderButton.svg" alt="Order Button" />
         </div>
       </div>
+      <!-- thank you card -->
       <div class="thank-you-container">
         <h2>Order confirmed! <br> Let’s get this pancake party flipping!</h2>
       </div>
