added a section for each continent and sorted countries by name

--- a/country_info/index.html
+++ b/country_info/index.html
@@ -81,11 +81,8 @@
         </div>
       </section>
     </main>
-    <main>
-      <section>
-        <h2>Country:</h2>
-        <ul class="gridContainer"></ul>
-      </section>
+    <main id="regionsMain">
+      <!-- contents from main.js -->
     </main>
     <footer>this is a footer</footer>
   </body>
