--- a/country_info/index.html
+++ b/country_info/index.html
@@ -82,9 +82,7 @@
       </section>
     </main>
     <main id="regionsMain">
-      <div class="region_select">
-        <h2 class="region_select_button" id="region_all">All</h2>
-      </div>
+      <div class="region_select"></div>
       <!-- contents from main.js -->
     </main>
     <footer>this is a footer</footer>
