--- a/country_info/index.html
+++ b/country_info/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <title>Countries Info</title>
   </head>
   <body>
@@ -13,6 +17,9 @@
       </div>
     </header>
     <main id="countryContainer" style="display: none">
+      <button class="closeButton" onclick="closeCountryContainer()">
+        <span class="material-symbols-outlined"> close_small </span>
+      </button>
       <section class="bannerSection">
         <h1 style="display: flex; align-items: center">
           <img src="assets/textDecorationArrow.svg" alt="Decoration" />
