fix the region select buttons, add a footer, remove unesessary headings

--- a/country_info/index.html
+++ b/country_info/index.html
@@ -92,7 +92,12 @@
       <div class="region_select"></div>
       <!-- contents from main.js -->
     </main>
-    <footer>this is a footer</footer>
+    <footer style="display: flex; justify-content: center">
+      <p>
+        Countries Info by Alex Tran. Countries databases by REST Country
+        (https://restcountries.com/)
+      </p>
+    </footer>
   </body>
   <script src="main.js"></script>
 </html>
