minor fix and add some decoration
fix bugs in script. update cars json. add some decoration and style

--- a/cars_databases/index.html
+++ b/cars_databases/index.html
@@ -31,9 +31,10 @@
           <!-- error message content injected from JS if any field is not fill when submit -->
           <p id="error_msg"></p>
         </form>
+        <img src="car_picture.webp" alt="Car Picture" />
       </section>
-    </main>
-    <main>
+      <!-- </main>
+    <main> -->
       <section class="car_database">
         <div class="car_database_header">
           <h2>Car database:</h2>
