add a new landing pages
new HTML, CSS and JS file for landing page

--- a/index.html
+++ b/index.html
@@ -3,28 +3,89 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alex's personal project</title>
+    <title>Website Projects</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Welcome to my personal projects pages!</h1>
-    <p>This page is just a placeholder for an awesome portfolio page.</p>
-    <p>Check out some of the projects that I am currently working on bellow!</p>
-    <a href="/ask_the_oracle"
-      >"Ask the Oracle" - A page to get an answer for all your question.</a
-    ><br />
-    <a href="/country_info"
-      >"Country Info" - Get information about all countries in the world.</a
-    ><br />
-    <a href="/pancake_shop"
-      >"Pancake shop" - An e-commerce store to trade, sell and customize
-      pancakes.</a
-    ><br />
-    <a href="/portfolio"
-      >"My portfolio" - My personal portfolio page. Work in progress.</a
-    ><br />
-    <a href="/typewriter"
-      >"Typewriter App" - Typing simulator with some inspiration from the Alan
-      Wake games</a
-    ><br />
+    <main class="container">
+      <h1>My Projects</h1>
+
+      <div class="project">
+        <h3>Cars database</h3>
+        <p>Store and browse car infos</p>
+        <p>Tech used: HTML, CSS, Javascript</p>
+        <a href="https://alextran.dev/cars_databases" target="_blank">
+          <p class="url">Visit sites</p>
+        </a>
+        <a href="#" target="_blank">
+          <p class="url">Show codes</p>
+        </a>
+        <iframe class="preview" src="https://alextran.dev/cars_databases"></iframe>
+      </div>
+
+      <div class="project">
+        <h3>Countries info</h3>
+        <p>Browse information about all countries in the world</p>
+        <p>Tech used: HTML, CSS, Javascript</p>
+        <a href="https://alextran.dev/country_info" target="_blank">
+          <p class="url">Learn more about countries</p>
+        </a>
+        <iframe class="preview" src="https://www.carwash.fi/pesulat/carwash-suomenoja"></iframe>
+      </div>
+
+      <div class="project">
+        <h3>Carwash Suomi franchise website</h3>
+        <a href="https://carwash.fi/pesulat/carwash-suomenoja" target="_blank">
+          <p class="url">Visit store landing page</p>
+        </a>
+        <a href="https://carwash.fi" target="_blank">
+          <p class="url">Visit all store page</p>
+        </a>
+        <iframe class="preview" src="https://www.carwash.fi/pesulat/carwash-suomenoja"></iframe>
+      </div>
+
+      <div class="project">
+        <h3>Carwash Suomi franchise website</h3>
+        <a href="https://carwash.fi/pesulat/carwash-suomenoja" target="_blank">
+          <p class="url">Visit store landing page</p>
+        </a>
+        <a href="https://carwash.fi" target="_blank">
+          <p class="url">Visit all store page</p>
+        </a>
+        <a href="https://carwash.fi" target="_blank">
+          <p class="url">Show codes</p>
+        </a>
+        <iframe class="preview" src="https://www.carwash.fi/pesulat/carwash-suomenoja"></iframe>
+      </div>
+
+      <div class="project">
+        <h3>Carwash Suomi franchise website</h3>
+        <a href="https://carwash.fi/pesulat/carwash-suomenoja" target="_blank">
+          <p class="url">Visit store landing page</p>
+        </a>
+        <a href="https://carwash.fi" target="_blank">
+          <p class="url">Visit all store page</p>
+        </a>
+        <a href="https://carwash.fi" target="_blank">
+          <p class="url">Show codes</p>
+        </a>
+        <iframe class="preview" src="https://www.carwash.fi/pesulat/carwash-suomenoja"></iframe>
+      </div>
+
+      <div class="project">
+        <h3>Carwash Suomi franchise website</h3>
+        <a href="https://carwash.fi/pesulat/carwash-suomenoja" target="_blank">
+          <p class="url">Visit store landing page</p>
+        </a>
+        <a href="https://carwash.fi" target="_blank">
+          <p class="url">Visit all store page</p>
+        </a>
+        <a href="https://carwash.fi" target="_blank">
+          <p class="url">Show codes</p>
+        </a>
+        <iframe class="preview" src="https://www.carwash.fi/pesulat/carwash-suomenoja"></iframe>
+      </div>
+    </main>
+    <script src="scripts.js"></script>
   </body>
 </html>
