refactor codes, made a templates for project cards

--- a/index.html
+++ b/index.html
@@ -14,77 +14,46 @@
         <h3>Cars database</h3>
         <p>Store and browse car infos</p>
         <p>Tech used: HTML, CSS, Javascript</p>
-        <a href="https://alextran.dev/cars_databases" target="_blank">
+        <a href="https://alextran.dev/cars_databases" class="link" target="_blank">
           <p class="url">Visit sites</p>
         </a>
         <a href="#" target="_blank">
           <p class="url">Show codes</p>
         </a>
-        <iframe class="preview" src="https://alextran.dev/cars_databases"></iframe>
+        <iframe class="preview"></iframe>
       </div>
 
       <div class="project">
         <h3>Countries info</h3>
         <p>Browse information about all countries in the world</p>
         <p>Tech used: HTML, CSS, Javascript</p>
-        <a href="https://alextran.dev/country_info" target="_blank">
+        <a href="https://alextran.dev/country_info" class="link" target="_blank">
           <p class="url">Learn more about countries</p>
         </a>
-        <iframe class="preview" src="https://www.carwash.fi/pesulat/carwash-suomenoja"></iframe>
+        <iframe class="preview"></iframe>
       </div>
 
       <div class="project">
         <h3>Carwash Suomi franchise website</h3>
-        <a href="https://carwash.fi/pesulat/carwash-suomenoja" target="_blank">
+        <a href="https://carwash.fi/pesulat/carwash-suomenoja" class="link" target="_blank">
           <p class="url">Visit store landing page</p>
         </a>
         <a href="https://carwash.fi" target="_blank">
           <p class="url">Visit all store page</p>
         </a>
-        <iframe class="preview" src="https://www.carwash.fi/pesulat/carwash-suomenoja"></iframe>
+        <iframe class="preview"></iframe>
       </div>
 
-      <div class="project">
-        <h3>Carwash Suomi franchise website</h3>
-        <a href="https://carwash.fi/pesulat/carwash-suomenoja" target="_blank">
-          <p class="url">Visit store landing page</p>
+      <!-- <div class="project">
+        <h3></h3>
+        <a href="" class="link" target="_blank">
+          <p class="url">Visit</p>
         </a>
-        <a href="https://carwash.fi" target="_blank">
-          <p class="url">Visit all store page</p>
-        </a>
-        <a href="https://carwash.fi" target="_blank">
+        <a href="" target="_blank">
           <p class="url">Show codes</p>
         </a>
-        <iframe class="preview" src="https://www.carwash.fi/pesulat/carwash-suomenoja"></iframe>
-      </div>
-
-      <div class="project">
-        <h3>Carwash Suomi franchise website</h3>
-        <a href="https://carwash.fi/pesulat/carwash-suomenoja" target="_blank">
-          <p class="url">Visit store landing page</p>
-        </a>
-        <a href="https://carwash.fi" target="_blank">
-          <p class="url">Visit all store page</p>
-        </a>
-        <a href="https://carwash.fi" target="_blank">
-          <p class="url">Show codes</p>
-        </a>
-        <iframe class="preview" src="https://www.carwash.fi/pesulat/carwash-suomenoja"></iframe>
-      </div>
-
-      <div class="project">
-        <h3>Carwash Suomi franchise website</h3>
-        <a href="https://carwash.fi/pesulat/carwash-suomenoja" target="_blank">
-          <p class="url">Visit store landing page</p>
-        </a>
-        <a href="https://carwash.fi" target="_blank">
-          <p class="url">Visit all store page</p>
-        </a>
-        <a href="https://carwash.fi" target="_blank">
-          <p class="url">Show codes</p>
-        </a>
-        <iframe class="preview" src="https://www.carwash.fi/pesulat/carwash-suomenoja"></iframe>
-      </div>
+        <iframe class="preview"></iframe>
+      </div> -->
     </main>
     <script src="scripts.js"></script>
   </body>
