addded all personal projects

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="https://alextran.dev/cars_databases" class="link" target="_blank">
           <p class="url">Visit sites</p>
         </a>
-        <a href="#" target="_blank">
+        <a href="https://github.com/dk10119/personal_projects/tree/main/cars_databases" target="_blank">
           <p class="url">Show codes</p>
         </a>
         <iframe class="preview"></iframe>
@@ -26,20 +26,79 @@
       <div class="project">
         <h3>Countries info</h3>
         <p>Browse information about all countries in the world</p>
-        <p>Tech used: HTML, CSS, Javascript</p>
+        <p>Tech used: HTML, CSS, Javascript, REST Countries API</p>
         <a href="https://alextran.dev/country_info" class="link" target="_blank">
           <p class="url">Learn more about countries</p>
+        </a>
+        <a href="https://github.com/dk10119/personal_projects/tree/main/country_info" target="_blank">
+          <p class="url">Show codes</p>
         </a>
         <iframe class="preview"></iframe>
       </div>
 
       <div class="project">
         <h3>Carwash Suomi franchise website</h3>
+        <p>A marketing site for Carwash Suomi franchise</p>
+        <p>The site feature a landing page for each store and a hub to show all stores</p>
+        <p>Customer can view all kind of store information, pricelist and book a car wash slot on the storepage</p>
+        <p>Tech used: HTML, CSS, Javascript, Webflow, Hotjar</p>
         <a href="https://carwash.fi/pesulat/carwash-suomenoja" class="link" target="_blank">
           <p class="url">Visit store landing page</p>
         </a>
         <a href="https://carwash.fi" target="_blank">
           <p class="url">Visit all store page</p>
+        </a>
+        <iframe class="preview"></iframe>
+      </div>
+
+      <div class="project">
+        <h3>Pancake shop</h3>
+        <p>A place where pancake lovers can customize and order pancakes</p>
+        <p>Tech used: HTML, CSS, Javascript</p>
+        <a href="https://alextran.dev/pancake_shop" class="link" target="_blank">
+          <p class="url">Visit</p>
+        </a>
+        <a href="https://github.com/dk10119/personal_projects/tree/main/pancake_shop" target="_blank">
+          <p class="url">Show codes</p>
+        </a>
+        <iframe class="preview"></iframe>
+      </div>
+
+      <div class="project">
+        <h3>Portfolio v2 (Work in progress)</h3>
+        <p>Version 2 of my personal portfolio</p>
+        <p>Tech used: HTML, CSS, Javascript</p>
+        <a href="https://alextran.dev/portfolio" class="link" target="_blank">
+          <p class="url">Visit</p>
+        </a>
+        <a href="https://github.com/dk10119/personal_projects/tree/main/portfolio" target="_blank">
+          <p class="url">Show codes</p>
+        </a>
+        <iframe class="preview"></iframe>
+      </div>
+
+      <div class="project">
+        <h3>Ask the oracle</h3>
+        <p>The oracle can answer any question</p>
+        <p>Tech used: HTML, CSS, Javascript</p>
+        <a href="https://alextran.dev/ask_the_oracle" class="link" target="_blank">
+          <p class="url">Visit</p>
+        </a>
+        <a href="https://github.com/dk10119/personal_projects/tree/main/ask_the_oracle" target="_blank">
+          <p class="url">Show codes</p>
+        </a>
+        <iframe class="preview"></iframe>
+      </div>
+
+      <div class="project">
+        <h3>Typewriter</h3>
+        <p>A simple typewriter app with some inspiration from Alan Wake</p>
+        <p>Tech used: HTML, CSS, Javascript</p>
+        <a href="https://alextran.dev/typewriter" class="link" target="_blank">
+          <p class="url">Visit</p>
+        </a>
+        <a href="https://github.com/dk10119/personal_projects/tree/main/typewriter" target="_blank">
+          <p class="url">Show codes</p>
         </a>
         <iframe class="preview"></iframe>
       </div>
