added some decoration and improve styling

--- a/cars_databases/index.html
+++ b/cars_databases/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
-    <title>Cars</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <title>Cars Database</title>
   </head>
   <body>
+    <nav>
+      <!-- <img src="assets/car_picture_small.webp" alt="Car image decoration" /> -->
+      <h1>CARS DATABASE</h1>
+    </nav>
     <main>
       <section class="add_car">
         <form action="#" class="car_form">
@@ -31,10 +32,9 @@
           <!-- error message content injected from JS if any field is not fill when submit -->
           <p id="error_msg"></p>
         </form>
-        <img src="car_picture.webp" alt="Car Picture" />
+        <img src="assets/car_picture.webp" alt="Car Picture" />
       </section>
-      <!-- </main>
-    <main> -->
+
       <section class="car_database">
         <div class="car_database_header">
           <h2>Car database:</h2>
@@ -72,6 +72,9 @@
         </table>
       </section>
     </main>
+    <footer>
+      <div></div>
+    </footer>
   </body>
   <script src="main.js"></script>
 </html>
