--- a/cars_databases/index.html
+++ b/cars_databases/index.html
@@ -30,7 +30,7 @@
           <input type="text" id="color" name="color" />
           <div>
             <button type="submit" id="submit">Submit</button>
-            <button type="reset" id="reset">Reset</button>
+            <button type="reset">Reset</button>
           </div>
           <!-- error message content injected from JS if any field is not fill when submit -->
           <p id="error_msg"></p>
