fix an URL, add a project

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h3>Cars database</h3>
         <p>Store and browse car infos</p>
         <p>Tech used: HTML, CSS, Javascript</p>
-        <a href="https://alextran.dev/cars_databases" class="link" target="_blank">
+        <a href="https://alextran.dev/cars_database" class="link" target="_blank">
           <p class="url">Visit sites</p>
         </a>
-        <a href="https://github.com/dk10119/personal_projects/tree/main/cars_databases" target="_blank">
+        <a href="https://github.com/dk10119/personal_projects/tree/main/cars_database" target="_blank">
           <p class="url">Show codes</p>
         </a>
         <iframe class="preview"></iframe>
@@ -59,6 +59,19 @@
           <p class="url">Visit</p>
         </a>
         <a href="https://github.com/dk10119/personal_projects/tree/main/pancake_shop" target="_blank">
+          <p class="url">Show codes</p>
+        </a>
+        <iframe class="preview"></iframe>
+      </div>
+
+      <div class="project">
+        <h3>CSS_tricks</h3>
+        <p>Show case some CSS tricks to make a animated and mobile friendly site</p>
+        <p>Tech used: HTML, CSS, Javascript</p>
+        <a href="https://alextran.dev/CSS_tricks" class="link" target="_blank">
+          <p class="url">Visit</p>
+        </a>
+        <a href="https://github.com/dk10119/personal_projects/tree/main/CSS_tricks" target="_blank">
           <p class="url">Show codes</p>
         </a>
         <iframe class="preview"></iframe>
