add scroll top button and sscroll function

--- a/CSS_tricks/index.html
+++ b/CSS_tricks/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header class="bg">
       <div class="logo">
         <h1>Alex Tran</h1>
       </div>
@@ -27,6 +27,9 @@
       <section>
         <h2>About</h2>
       </section id="about">
+      <section id="projects2">
+        <h2>Projects</h2>
+      </section>
     </main>
     <footer id="contact">
       <button id="back_to_top_button">Back to top</button>
