add mobile responsive burger menu

--- a/CSS_tricks/index.html
+++ b/CSS_tricks/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,700,0,0" />
     <title>Document</title>
   </head>
   <body>
@@ -12,6 +13,7 @@
         <h1>Alex Tran</h1>
       </div>
       <nav>
+        <button class="mobile"><span class="material-symbols-outlined">menu</span></button>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#project">Projects</a></li>
